--- a/docs/ssjs/debugging-ssjs.mdx
+++ b/docs/ssjs/debugging-ssjs.mdx
@@ -83,7 +83,7 @@ For many issues leading to 500 error, there is an even faster solution, but it r
 1. You need to have [Visual Studio Code](https://code.visualstudio.com/ "Visual Studio Code Website") with [ESLint extension](https://marketplace.visualstudio.com/items?itemName=dbaeumer.vscode-eslint "ESLint in Visual Studio Code Marketplace") installed.
 2. You need to have [NodeJS](https://nodejs.org/en/ "NodeJS Website") installed.
 3. You need to have a folder where you will store your SSJS code in files with the `.ssjs` file extension.
-4. You need to install the excellent [ESLing configuration for SSJS](https://github.com/JoernBerkefeld/eslint-config-ssjs "Joern Berkefeld Github Project with Config") made by [Joern Berkefeld](https://www.linkedin.com/in/joernberkefeld/ "Joern Berkefeld LinkedIn"). To do this, run in terminal `npm i -D eslint eslint-config-ssjs` for the SSJS folder.
+4. You need to install the excellent [ESLint configuration for SSJS](https://github.com/JoernBerkefeld/eslint-config-ssjs "Joern Berkefeld Github Project with Config") made by [Joern Berkefeld](https://www.linkedin.com/in/joernberkefeld/ "Joern Berkefeld LinkedIn"). To do this, run in terminal `npm i -D eslint eslint-config-ssjs` for the SSJS folder.
 
 Once done, you have automatic SSJS code validation (again, only from the perspective of 500 error - but it is still worth it).
 
