--- a/docs/interaction-studio/mcp-serverside-code-context.mdx
+++ b/docs/interaction-studio/mcp-serverside-code-context.mdx
@@ -11,7 +11,7 @@ import { LeadText } from '../../src/components/LeadText.js';
 
 <LeadText content="Context is king. Also when coding MCP Campaign Templates. Read about all its undocumented tricks." />
 
-Marketing Cloud Personalization offers a flexible campaign template creation tooling with multiple [properties](./mcp-serverside-code-properties.mdx) and imports that help you fulfil business needs with a pleasant user experience for the marketer. There is also one more - undocumented - feature that can change your template from good to outstanding. The CampaignComponentContext object.
+Marketing Cloud Personalization offers flexible campaign template creation tooling with multiple [properties](./mcp-serverside-code-properties.mdx) and imports that help you fulfil business needs while providing a pleasant user experience for the marketer. There is also one more—undocumented—feature that can change your template from good to outstanding: the CampaignComponentContext object.
 
 :::note You Should Know
 
@@ -51,11 +51,11 @@ It's straightforward to use once you know what's in there. For example, you can 
     }
 ```
 
-And that's just a basic usage. The key to unlocking the power of a context object is knowing what is stored there and how you can use it. So let's dive in, property by property (hint, the fun part starts at [`event`](#event)).
+And that's just a basic usage. The key to unlocking the power of a context object is knowing what is stored there and how to use it. So let's dive in, property by property (hint: the fun part starts at [`event`](#event)).
 
 :::note You Should Know
 
-This article is in a work-in-progress state - I'm ongoingly extending details about various parts of the context object as I can use it in real life.
+This article is a work in progress. I'm continually extending details about various parts of the context object as I use it in real life.
 
 :::
 
@@ -83,7 +83,7 @@ In short, don't use `context` for custom payload dedicated to control group user
 
 ## beaconVersion
 
-The `beaconVersion` number property will display the current Web SDK version (f.e. `16` at the moment of writing it) or `0` for the preview/control group. Not really useful.
+The `beaconVersion` number property will display the current Web SDK version (e.g., `16` at the time of writing) or `0` for the preview/control group. Not really useful.
 
 ## event
 
@@ -91,13 +91,13 @@ The `event` object property is where the magic of the `context` object starts. I
 
 :::note You Should Know
 
-The `context.event` object won't work correctly in the Template Preview sidebar, as there is no valid event in that mode. Use an active campaign directly on the website to preview the actual output during development. Just make sure you use the campaign targeting to limit execution just to you.
+The `context.event` object won't work correctly in the Template Preview sidebar, as there is no valid event in that mode. Use an active campaign directly on the website to preview the actual output during development. Make sure you use the campaign targeting to limit execution just to you.
 
-In Template Preview you will only be able to use [`context.event.fields.item`](#eventfields) - a single property with a stringified object containing details of the Item selected in top right Simulate section):
+In Template Preview, you will only be able to use [`context.event.fields.item`](#eventfields) - a single property with a stringified object containing details of the Item selected in the top right Simulate section):
 ```
 "{\"type\":\"ITEM_TYPE\",\"_id\":{\"label\":\"ITEM_LABEL\",\"value\":\"ITEM_ID\"}}"
 ```
-You can find example usage of it in my [MCP Catalog ETL Metadata Viewer](./snippets/mcp-catalog-etl-metadata-viewer.mdx).
+My [MCP Catalog ETL Metadata Viewer](./snippets/mcp-catalog-etl-metadata-viewer.mdx) provides an example of its usage.
 
 :::
 
@@ -166,7 +166,7 @@ On top of the above, `context.event` also contains the `context.event.fields` su
 
 #### context.event.fields.pageType
 
-Returns the name of the currently viewed page type as configured in the Sitemap (f.e. `'Home'`). It is useful when you want to adapt the serverside payload of the campaign based on page type when the content zone is shared across many sites.
+Returns the name of the currently viewed page type as configured in the Sitemap (e.g., "Home"). This is useful when you want to adapt the campaign's serverside payload based on page type when the content zone is shared across many sites.
 
 #### context.event.fields.action
 
@@ -255,7 +255,7 @@ It's a nested object, so let's go through it property by property to discuss eac
 
 ### services.catalog
 
-The `services.catalog` object contains a set of lookup methods that help you find Items in your Marketing Cloud Personalizaiton Catalogs. It opens a big range of use cases using related Items for cross-sell and up-sell purposes.
+The `services.catalog` object contains a set of lookup methods that help you find Items in your Marketing Cloud Personalization Catalogs. It opens a wide range of use cases for using related Items for cross-sell and up-sell purposes.
 
 ```js title="Structure of the context.services.catalog object"
 {
@@ -266,7 +266,7 @@ The `services.catalog` object contains a set of lookup methods that help you fin
 }
 ```
 
-Most of those methods returns Item object - the content of it will differ depending on what type of item it is. By default, it will contain `id` string, and `attributes` object that has `name`, `imageUrl`, `description`, `promotable` and `archived` properties. Optionally, Item can also have `dimensions` object with RCO's data and `location` object. Finally, there are some properties that are related to a specific type of an Item - like `categories`, `skus`, `modifiedTime` or `subtitle`.
+Most of those methods return an Item object - the content of it will differ depending on what type of item it is. By default, it will contain an `id` string and an `attributes` object with a `name`, `imageUrl`, `description`, `promotable` and `archived` properties. Optionally, an Item can also have a `dimensions` object with RCO's data and a `location` object. Finally, some properties are related to a specific type of an Item - like `categories`, `skus`, `modifiedTime` or `subtitle`.
 
 ```json title="Example Item structure for a Product Catalog"
 {
@@ -328,7 +328,7 @@ Most of those methods returns Item object - the content of it will differ depend
 
 #### context.services.catalog.findItem()
 
-The `findItem()` is the most strightforward catalog lookup method. It requires a Catalog Type (f.e. 'Product', 'Category', or your custom Catalog) and Item ID (as string) to return the full Item detail.
+The `findItem()` is the most straightforward Catalog lookup method. It requires a Catalog Type (e.g., 'Product', 'Category', or your custom Catalog) and an Item ID (as a string) to return the full Item detail.
 
 ```ts title="Return Item details"
 const itemDetails = context.services.catalog.findItem('Product', '19542');
@@ -348,38 +348,38 @@ This pairing lets us implement complex use cases like recommending direct cross-
 // Get details of the currently viewed item
 const itemId = context.event.itemId();
 const viewedItemDetails = context.services.catalog.findItem('Product', itemId);
-// Leverage those details to pull IDs of the hardcoded upsell and crosssell products
+// Leverage those details to pull IDs of the hardcoded up-sell and cross-sell products
 const upSellableItemId = viewedItemDetails.attributes?.upSellableItemId?.value;
 const crossSellableItemId = viewedItemDetails.attributes?.crossSellableItemId?.value;
-// Pass those IDs to yet another findItem method to get full details to fill in the handlebars with data
+// Pass those IDs to yet another findItem method to get full details and fill in the handlebars with data
 const upSellableItemDetails = context.services.catalog.findItem('Product', upSellableItemId);
 const crossSellableItemDetails = context.services.catalog.findItem('Product', crossSellableItemId);
 ```
 
-Of course, doing so many `findItem()` calls is not optimal - and MCP offers another method as a solution for that.
+Of course, making so many `findItem()` calls is not optimal, and MCP offers another method as a solution.
 
 #### context.services.catalog.findItems()
 
-The `findItems()` method allows you to request details for multiple Items in a single call. Cleaner and more performant. The baseline way of calling this functions works just as [`findItem()`](#contextservicescatalogfinditem), but requires an array of IDs instead of a single ID and returns an array of Item detail objects instead of single Item object.
+The `findItems()` method allows you to request details for multiple Items in a single call, which is cleaner and more performant. The baseline way of calling this function works just as [`findItem()`](#contextservicescatalogfinditem), but it requires an array of IDs instead of a single ID and returns an array of Item detail objects instead of a single Item object.
 
 ```ts title="Return multiple Items details"
 const itemsDetails = context.services.catalog.findItem('Product', ['19542', '12524', '91324']);
 ```
 
-A neat use case for that method is pulling currently viewed Item details with [`findItem()`](#contextservicescatalogfinditem) to get values from a custom attribute containing alternative product IDs or a dedicated accessories for it and then pass all those found product IDs into `findItems()` to get a full detail required for a personalization showcasing those related items.
+A neat use case for that method is pulling currently viewed Item details with [`findItem()`](#contextservicescatalogfinditem) to get values from a custom attribute containing alternative product IDs or dedicated accessories for it. Then, pass all those found product IDs into `findItems()` to get the full detail required for a personalization showcasing those related items.
 
-The `findItems()` method offers more. You are not limited to just pushing an array of IDs like mentioned above - you can also pass an ItemFilter (created by [`dimensionFilter()`](#contextservicescatalogdimensionfilter) method) to get the IDs of items available in a custom (and only custom) catalog.
+The `findItems()` method offers more. You are not limited to just pushing an array of IDs like mentioned above - you can also pass an ItemFilter (created by [`dimensionFilter()`](#contextservicescatalogdimensionfilter) method) to get the IDs of items available in a custom (and only custom) Catalog.
 
 ```ts {2} title="Return multiple Items details"
 const catalogFilter = context.services.catalog.dimensionFilter('Color');
 const itemsDetails = context.services.catalog.findItems(catalogFilter);
 ```
 
-It can be further extended that custom catalog based approach by passing an ItemSort as a second argument. However, despite trying my luck with `sortByActivity` and `sortByPublishedDate` properties, I haven't been able to make it work. Too bad, as sorting by activity could have been interesting when working with custom catalog Items.
+It can be further extended that custom-catalog-based approach by passing an ItemSort as a second argument. However, despite trying my luck with the `sortByActivity` and `sortByPublishedDate` properties, I haven't been able to make it work. That's too bad, as sorting by activity could have been interesting when working with custom Catalog Items.
 
 #### context.services.catalog.findClosestItems()
 
-If you are using locations details for your Items, `findClosestItems()` methods will work wonders for you as it allows you to get items based on provided longitude and latitude within defined distance:
+If you are using location details for your Items, the `findClosestItems()` method will work wonders for you as it allows you to get items based on the provided longitude and latitude within a defined distance:
 
 ```ts {2} title="Return multiple Items details"
 const closestDefinition = {itemType: 'Product', latitude: 52.23, longitude: 21.0118, maxDistance: 10, maxResults: 5};
@@ -388,12 +388,12 @@ const itemsDetails = context.services.catalog.findClosestItems(closestDefinition
 
 As you can see, you need to provide an object with itemType, longitude and latitude, maxDistance (in miles) and maxResults as an argument. All fields are required. Of course, you don't have to hardcode it. There are two neat use cases around dynamically provided longitude and latitude:
 
-1. You can try to get longitude and latitude from [`context.user.location.geographicPoint`](#userlocation). This allows you for magic-like recommendations even for anonymous, first time vists. However, confidence might be limited depending on the market specifics.
-2. You can capture user-provided location (be it based on the shipping details or the city they are filtering for on your website) and pass calculated long/lat to a user attribute. Then user that user attribute as source of data for `findClosestItems()` call to provide location-aware recommendations for your customers.
+1. You can try to get longitude and latitude from [`context.user.location.geographicPoint`](#userlocation). It allows you to make magic-like recommendations even for anonymous, first-time visits. However, confidence might be limited depending on the market specifics.
+2. You can capture user-provided location (based on the shipping details or the city they are filtering for on your website) and pass calculated long/lat to a user attribute. Then, use that user attribute as the source of data for the `findClosestItems()` call to provide location-aware recommendations for your customers.
 
 #### context.services.catalog.dimensionFilter()
 
-As mentioned in [`findItems()`](#contextservicescatalogfinditems), `dimensionFilter()` method lets us create an ItemFilter that can be leveraged to find Items from a given custom catalog (used to be called a Dimension, hence method name). Just pass the catalog name as a string in there. That's it.
+As mentioned in [`findItems()`](#contextservicescatalogfinditems), the `dimensionFilter()` method lets us create an ItemFilter that can be leveraged to find Items from a given custom catalog (which used to be called a Dimension, hence the method name). Just pass the Catalog name as a string there. That's it.
 
 ```ts title="Create an ItemFilter for Color Catalog"
 const catalogFilter = context.services.catalog.dimensionFilter('Color');
@@ -401,7 +401,7 @@ const catalogFilter = context.services.catalog.dimensionFilter('Color');
 
 ### services.recommendations
 
-The `services.recommendations` object contains four methods related to Item recommendations. Two of them are absolutely great for delivering highly customized use cross-selling use cases wheareas the other two doesn't seem to work. A nice mixed bag. Let's dive in.
+The `services.recommendations` object contains four methods related to Item recommendations. Two of them are absolutely great for delivering highly customized cross-selling use cases, while the other two don't seem to work. It's a nice mixed bag. Let's dive in.
 
 ```js title="Structure of the context.services.recommendations object"
 {
@@ -414,7 +414,7 @@ The `services.recommendations` object contains four methods related to Item reco
 
 #### context.services.recommendations.recommend()
 
-The `recommend()` method is a great solution for generating Item recommendations in a programmatic and highly customized way. It requires `currentItemId` and `currentItemType` as an anchor for the Recipe, `maxResults` to limit the number of outcomes, `recipeId` to apply the correct recommendation model and `userId` to pull correct affinity data.
+The `recommend()` method is an excellent solution for generating Item recommendations in a programmatic and highly customized way. It requires `currentItemId` and `currentItemType` as an anchor for the Recipe, `maxResults` to limit the number of outcomes, `recipeId` to apply the correct recommendation model and `userId` to pull the correct affinity data.
 
 Those data points can be hard coded, pulled from marketer-filled fields or captured from other context properties like [`context.user.id`](#user), [`context.event.itemId()`](#contexteventitemid) and [`context.event.itemType()`](#contexteventitemtype) or [`context.services.catalog`](#servicescatalog) outputs.
 
@@ -430,11 +430,11 @@ const recommendationsRequest = {
 const recommendedItems = context.services.recommendations.recommend(recommendationsRequest);
 ```
 
-It's great feature to deploy recommendations that shouldn't be changed during campaign configuration, cross-sell offerings based on currently viewed item (using its custom attributes) or item filter based on negative recipes.
+It's a great feature for deploying recommendations that shouldn't be changed during campaign configuration, cross-selling offerings based on the currently viewed item (using its custom attributes), or filtering items based on negative recipes.
 
 :::note You Should Know
 
-This `recommend()` method works just as the `recommend` that you can import in the template along with `RecommendationsConfig` from `recs` module. The imported one is better suited for the user friendly module that marketer can setup according to the business needs during campaign configuration phase. Context method is better for deploying hardcoded logic programatically without any input from the marketer - the key value being the possibility to provide custom Item anchor that might be different from currently viewed one.
+The `recommend()` method works just as the `recommend` that you can import in the template along with `RecommendationsConfig` from the `recs` module. The imported one is better suited for the user-friendly module that the marketer can set up according to the business needs during the campaign configuration phase. The context method is better for deploying hardcoded logic programmatically without any input from the marketer—the key value being the possibility of providing a custom Item anchor that might be different from the currently viewed one.
 
 However, forcing a custom anchor Item is also possible with the imported `recommend` thanks to the `overrideOnPageAnchor()` method (requiring `itemId` and `itemType` string arguments) that can be deployed both along with RecommendationsConfig as well as within the [`run` block](./mcp-serverside-code-basics.mdx#writing-serverside-code):
 
@@ -460,7 +460,7 @@ export class customAnchorRecommendation implements CampaignTemplateComponent {
 
 #### context.services.recommendations.recommendIdsOnly()
 
-The `recommendIdsOnly()` method works exactly the same as [`recommend()`](#contextservicesrecommendationsrecommend) but instead of returning an array of objects with Item details it returns an array of Item Ids as strings. Just as `recommendIdsOnly` that you can import along with `RecommendationsConfig` from `recs` module.
+The `recommendIdsOnly()` method works like [`recommend()`](#contextservicesrecommendationsrecommend), but instead of returning an array of objects with Item details, it returns an array of Item IDs as strings. Just as `recommendIdsOnly` you can import with `RecommendationsConfig` from the `recs` module.
 
 ```ts {9} title="Return IDs of items recommended from a recipe"
 const userId = context.user.id;
@@ -474,17 +474,17 @@ const recommendationsRequest = {
 const recommendedItemIds = context.services.recommendations.recommendIdsOnly(recommendationsRequest);
 ```
 
-It can be useful if you only need to pass IDs to the e-commerce platform for it to render the campaign experience or when you want to filter out specific IDs returned by a recipe from another recommendation you deploy.
+It can be helpful if you only need to pass IDs to the e-commerce platform for it to render the campaign experience or when you want to filter out specific IDs returned by a recipe from another recommendation you deploy.
 
 #### context.services.recommendations.smartSearch()
 
-The `smartSearch()` method seems to be currently limited to the MCP backend purposes - I wasn't able to find the proper structure of the `query` argument it requires to make it work. In the Evergage times it enabled personalized search results when interacting with the search box on the website.
+The `smartSearch()` method seems limited to the MCP backend purposes - I couldn't find the proper structure of the `query` argument required to make it work. In the Evergage times it enabled personalized search results when interacting with the search box on the website.
 
 #### context.services.recommendations.smartSort()
 
-The `smartSort()` method requires an object with `itemIds` array, `recipeId` and `userId`. It was part of the same Evergage mechanism as [`smartSearch()`](#contextservicesrecommendationssmartsearch) as it sorted the returned search recommendations to best meet the affinities of the user.
+The `smartSort()` method requires an object with an `itemIds` array, `recipeId`, and `userId`. It was part of the same Evergage mechanism as [`smartSearch()`](#contextservicesrecommendationssmartsearch), as it sorted the returned search recommendations to best meet the user's affinities.
 
-Unfortunately it seems to be unavilable as well. Each time I try to implement it, I get `System service exception` despite having proper structure. Too bad, as it would be a cool feature for [`context.services.catalog`](#servicescatalog) set of functions - ordering Item Ids pulled from a custom attribute or a catalog retrieve based on current user interest.
+Unfortunately, it is also unavailable. Each time I try to implement it, I get a `System service exception` despite having the proper structure. Too bad, as it would be a cool feature for the [`context.services.catalog`](#servicescatalog) set of functions—ordering Item IDs pulled from a custom attribute or a catalog retrieve based on current user interest.
 
 ```ts {4} title="Item sorting that doesn't want to work :("
 const userId = context.user.id;
@@ -495,13 +495,15 @@ const smartSortedItems = context.services.recommendations.smartSort(smartSortReq
 
 ### services.smartTrends
 
+The `smartTrends()` method is a backend tool for the MCP Trends feature. Unfortunately it doesn't seem to work in the Serverside code with `This expression is not callable` and `Unknown identifier` errors dropping despite proper `SmartTrendsRequest` argument structure (`{itemIds: ['1018913', '60365', '1017847', '1105'], itemType: "Product", lookbackMinutes: 9999 }`).
+
 ```js title="Structure of the context.services.smartTrends object"
 {
      "smartTrends": (request: SmartTrendsRequest): ItemTrends[]
 }
 ```
 
-🚧 Work in progress 🚧
+For now, if you want to leverage MCP Trends, you need to use the client-side code API approach based on the [Trends Global Template](https://github.com/MateuszDabrowski/mcp-campaign-templates/tree/main/Global%20Templates/SalesforceInteractions/Trends).
 
 ### services.surveys
 
@@ -548,7 +550,7 @@ const smartSortedItems = context.services.recommendations.smartSort(smartSortReq
 
 ## user
 
-`context.user` is the most significant property covering tons of information about the user that triggered the campaign. It contains multiple subobjects and methods perfect for statistics-based use cases within the serverside code.
+`context.user` is the most significant property, covering tons of information about the user that triggered the campaign. It contains multiple subobjects and methods perfect for statistics-based use cases within the serverside code.
 
 ```js title="Structure of the context.user object"
 {
@@ -596,7 +598,7 @@ const homeViewCount = context.user.actionCount({actionName: 'Viewed Cart', start
 
 #### context.user.actionCountPerItem()
 
-In theory, it should be able to return the action count per item (after passing a `'Viewed Product'` action in ActionStatsRequest, it should show the counts per each product where that action triggered). But it doesn't. It returns the same information as [`actionCount()`](#contextuseractioncount) method, but instead of doing it directly as a number, it does it as an object with an action name. Unless I'm missing something - useless.
+In theory, it should be able to return the action count per item (after passing a `'Viewed Product'` action in ActionStatsRequest, it should show the counts per each product where that action triggered). But it doesn't. It returns the same information as the [`actionCount()`](#contextuseractioncount) method, but instead of doing it directly as a number, it does it as an object with an action name. Unless I'm missing something, it's useless.
 
 ```ts  title="Full on promise, null on delivery actionCountPerItem method"
 const homeViewCount = context.user.actionCountPerItem({actionName: 'Viewed Product'}); // Returns: {'Viewed Product': 5}
@@ -628,7 +630,7 @@ const brandActivity = context.user.getDimensionActivity('Brand', yesterday, toda
 // }
 ```
 
-That's an excellent set of data to calculate the most viewed Category, longest viewed Product or most purchased Brand by that specific user. Unfortunately, it's still just a proxy for the actual affinity data that is unavailable.
+That's an excellent set of data to calculate the most viewed Category, longest viewed Product, or most purchased Brand by that specific user. Unfortunately, it's still just a proxy for the actual affinity data, which is unavailable.
 
 :::note You Should Know
 
