--- a/docs/zen-of-sfmc.mdx
+++ b/docs/zen-of-sfmc.mdx
@@ -131,7 +131,7 @@ function debugValue(description, value) {
 };
 ```
 
-Read more on using comments in [SSJS]./ssjs/ssjs-style-guide.mdx#comments) and [AMPScript](./ampscript/ampscript-style-guide.mdx#comments).
+Read more on using comments in [SSJS](./ssjs/ssjs-style-guide.mdx#comments) and [AMPScript](./ampscript/ampscript-style-guide.mdx#comments).
 
 :::note You Should Know
 
