Fixed a typo found by Lesley Higgins

--- a/docs/interaction-studio/mcp-catalog-architecture.mdx
+++ b/docs/interaction-studio/mcp-catalog-architecture.mdx
@@ -14,7 +14,7 @@ import { LeadText } from '../../src/components/LeadText.js';
 
 ## Catalog Basics & Limitations
 
-The purpose of the Marketing Cloud Personalization (Interaction Studio) Catalog is to store your asseet data along with interconnecting relationships for personalisation and machine learning purposes.
+The purpose of the Marketing Cloud Personalization (Interaction Studio) Catalog is to store your asset data along with interconnecting relationships for personalisation and machine learning purposes.
 
 There are five out-of-the-box objects: Products, Articles, Blog Posts, Categories and Promotions. You can also create **up to 25 custom** Catalog Objects.
 
