Updated draft of SFMC Licence Limits article

--- a/docs/config/sfmc-licence-limits.mdx
+++ b/docs/config/sfmc-licence-limits.mdx
@@ -2,25 +2,38 @@
 id: sfmc-licence-limits
 title: SFMC Licence Limits
 sidebar_label: Licence Limits
-description:
+description: With great flexibility comes great limitations. Learn how SFMC licence limits can make or break your marketing operations.
 image: img/og/og-image-sfmc-licence-limits.png
 tags: [Marketing Cloud, Best Practice, Automation, API, Data Extensions, Setup]
 ---
 
 import { LeadText } from '../../src/components/LeadText.js';
 
-<LeadText content="" />
+<LeadText content="With great flexibility comes great limitations. Learn how SFMC licence limits can make or break your marketing operations." />
 
-## SFMC Licence Limits
 
-### Super Messages
+Salesforce Marketing Cloud (Enagement, aka Exact Target) is extremly flexibile platform, but it also has its limits. Licence limits that serve as guardrails protecting the stability of the tool and Salesforce's budget.
 
-### Contacts
 
-### Data Extension Storage
+Limit | Basic | Pro | Corporate | Enterprise
+-- | -- | -- | -- | --
+Super Messages | 250K | 2.5M | 10M | 150M
+Contacts | N/A | 15K | 45K | 500K
+Data Extension Storage | 1GB | 15GB | 45GB | 100GB
+Yearly Automation Executions | 0 | 15K | 45K | 100K
+Yearly API Calls | 0 | 2M | 6M | 200M
+Users | 5 | 15 | 45 | 100
 
-### Yearly Automation Executions
+## Super Messages
 
-### Yearly API Calls
+## Contacts
 
-### Users
+## Data Extension Storage
+
+## Yearly Automation Executions
+
+"Automations are measured via the number of times a single automation is run, regardless of the number of actual steps or activities within the automation. For example, an automated program that includes five steps with seven activities counts as just one automation each time the program is run."
+
+## Yearly API Calls
+
+## Users
