--- a/docs/docs-and-snippets.mdx
+++ b/docs/docs-and-snippets.mdx
@@ -119,9 +119,11 @@ To fully leverage the Salesforce Marketing Cloud Data Extensions and Automation 
 
 Many things in Salesforce Marketing Cloud aren't coding but have a massive impact on the code. Permissions. System Data Views. Configuration options. Here I focus on the most important ones that are crucial for Marketing Cloud developers.
 
+- [Licence Limits](./config/sfmc-licence-limits.mdx)
 - [System Data Views](./config/sfmc-system-data-views.mdx)
-- [Contact Deletion Process](./config/sfmc-contact-deletion.mdx)
+- [Mobile Connect Data Views](./config/sfmc-mobile-connect-data-views.mdx)
 - [MCC Integration Patterns](./config/sfmc-mcc-integration-patterns.mdx)
+- [Contact Deletion Process](./config/sfmc-contact-deletion.mdx)
 - [Enhanced Send Log](./config/sfmc-enhanced-send-log.mdx)
 - [Behavioral Triggers](./config/sfmc-behavioral-triggers.mdx)
 - [Power of Code Resources](./config/sfmc-code-resource.mdx)
