Update around broken SF Integration User licences for MCC

--- a/docs/config/sfmc-mcc-integration-patterns.mdx
+++ b/docs/config/sfmc-mcc-integration-patterns.mdx
@@ -382,7 +382,7 @@ This pattern leverages multiple CRM Integration Users per single CRM to get arou
 1. One CRM Integration User share Object synchronisation configuration and filters across all integrated Business Units.
 2. One CRM Integration User in Multi-Org Setup can integrate up to five Business Units before the integration performance and stability are impacted.
 
-As you can see, both cases are per one CRM Integration User. And while you are limited to only one Marketing Cloud Connect in a single Salesforce CRM, you can have multiple Integration Users connecting to the target Marketing Cloud Account. It allows you to go around both those issues - and is now easier than ever on your licence costs with freshly introduced five free CRM integration users.
+As you can see, both cases are per one CRM Integration User. And while you are limited to only one Marketing Cloud Connect in a single Salesforce CRM, you can have multiple Integration Users connecting to the target Marketing Cloud Account. It allows you to go around both those issues. Unfortunately freshly introduced free CRM integration users [cannot be used for this purpose](https://help.salesforce.com/s/articleView?id=000395036&type=1).
 
 :::note You Should Know
 
